--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -2,33 +2,53 @@
 {% load i18n %}
 
 {% block body_block %}
-    <form class="gp-form" role="form" method="post" action=".">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="id_old_password">Old password:</label>
-            <input class="form-control" autofocus="" id="id_old_password"
-                   name="old_password" type="password"
-                   required="">
-        </div>
-        <div class="form-group">
-            <label for="id_new_password1">New password:</label>
-            <input class="form-control" id="id_new_password1" name="new_password1"
-                   type="password" required=""> <span
-                class="helptext"></span>
-        </div>
-        <div class="form-group">
-            <ul>
-                <li>Your password can't be too similar to your other personal information.</li>
-                <li>Your password must contain at least 8 characters.</li>
-                <li>Your password can't be a commonly used password.</li>
-                <li>Your password can't be entirely numeric.</li>
-            </ul>
-        </div>
-        <div class="form-group">
+    <div class="jumbotron gp-jumbotron">
+        <h1>Change your password here!</h1>
+    </div>
 
-            <label for="id_new_password2">New password confirmation:</label>
-            <input class="form-control" id="id_new_password2" name="new_password2" type="password" required="">
-        </div>
-        <input class="btn btn-default" type="submit" value="{% trans 'Submit' %}"/>
-    </form>
+    <div class=" container-fluid gp-container-normal">
+        <form class="gp-form" role="form" method="post" action=".">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="id_old_password">Old password:</label>
+                <input class="form-control" autofocus="" id="id_old_password"
+                       name="old_password" type="password"
+                       required="">
+            </div>
+            <div class="form-group">
+                <label for="id_new_password1">New password:</label>
+                <input class="form-control" id="id_new_password1" name="new_password1"
+                       type="password" required=""> <span
+                    class="helptext"></span>
+            </div>
+            <div class="form-group">
+                <ul>
+                    <li>Your password can't be too similar to your other personal information.</li>
+                    <li>Your password must contain at least 8 characters.</li>
+                    <li>Your password can't be a commonly used password.</li>
+                    <li>Your password can't be entirely numeric.</li>
+                </ul>
+            </div>
+            <div class="form-group">
+
+                <label for="id_new_password2">New password confirmation:</label>
+                <input class="form-control" id="id_new_password2" name="new_password2" type="password" required="">
+            </div>
+            <input class="btn btn-lg btn-primary btn-block" type="submit" value="{% trans 'Submit' %}"/>
+        </form>
+    </div>
+
 {% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
