--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -102,7 +102,8 @@
 
                     {# <li><a href="/admin/">{{ user.username }}</a></li>#}
                     {# Source: http://stackoverflow.com/questions/806835/django-redirect-to-previous-page-after-login#}
-                    <li><a href="{% url 'forum' %}">Forum</a></li>
+                    <li><a href="{% url 'forum' %}">Community</a></li>
+                    <li><a href="{% url 'about' %}">About</a></li>
                     <li><a href="{% url 'auth_logout' %}">Logout</a></li>
 
                 {% else %}
