--- a/templates/app1/forum.html
+++ b/templates/app1/forum.html
@@ -2,8 +2,11 @@
 
 {% block body_block %}
 
+    <div class="jumbotron gp-jumbotron">
+        <h1>BDTM Community!</h1>
+    </div>
 
-    <div class="col-md-8 gp-side-panel-container">
+    <div class="container-fluid gp-container-normal">
 
         <div class="gp-side-panel">
             <div class="gp-side-panel-title">
@@ -67,24 +70,33 @@
                                 {% for hidden in a_form.hidden_fields %}
                                     {{ hidden }}
                                 {% endfor %}
-                                <div class="form-group">
 
-                                            <textarea placeholder="Have you the answer?" class="form-control" cols="40"
-                                                      id="id_text" maxlength="500" name="text"
-                                                      rows="1" required=""></textarea>
-
+                                <div class="input-group">
+                                    <input name="text" placeholder="Have you the answer?" class="form-control" equired>
+                                    <div class="input-group-btn">
+                                        <button id="bt{{ forloop.counter }}" class="btn btn-default" type="submit">
+                                            <i class="glyphicon glyphicon-send"></i>
+                                        </button>
+                                    </div>
                                 </div>
-                                <button class="btn btn-primary btn-block" type="submit" name="submit">Give Answer
-                                </button>
+
                             </form>
                         </div>
                     {% endfor %}
                 {% else %}
-                    <h2>No Questions asked Yet</h2>
+                    <div class="gp-ques-block">
+                        <div class="gp-ques-ans-block">
+                            <h3 class="gp-ques-ans-text gp-center">
+                                No Questions asked Yet!
+                            </h3>
+                        </div>
+                    </div>
                 {% endif %}
+            </div>
 
+        </div>
 
-
+    </div>
 
 
 {% endblock %}
