--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -109,6 +109,16 @@
                     {% if request.user.is_superuser %}
                         <li><a href="/admin">Super_admin</a></li>
                     {% endif %}
+                    <form class="navbar-form navbar-left" method="post" action="{% url 'search' %}">{% csrf_token %}
+                        <div class="input-group">
+                            <input type="text" name="place" class="form-control" placeholder="Search for Any Place">
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit">
+                                    <i class="glyphicon glyphicon-search"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
 
                 {% else %}
                     <li><a href="{% url 'index' %}">Home</a></li>
